tests/NormalTests/paczka1/fuzzy1/54600513.err
Error in line 2: 3VbC8GG S774 77,3
Error in line 6: BSMJ3zs S636 39,1
Error in line 17: 3VbC8GG S40 139,2
Error in line 15: aJQVy4S0X A819 994,2
Error in line 25: aJQVy4S0X S774 63,4
Error in line 40: 3VbC8GG S40 47,38
